--- a/poc/docker-compose.yml
+++ b/poc/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   minio:
-    image: minio/minio:RELEASE.2024-05-10T01-41-38Z
+    image: minio/minio:latest
     command: server /data
     environment:
       MINIO_ROOT_USER: admin
@@ -28,7 +28,7 @@ services:
 
   api:
     build: ./backend
-    entrypoint: ["/bin/sh","-c","/entrypoint.sh && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     environment:
       MINIO_ENDPOINT: http://minio:9000
       MINIO_BUCKET: cctv
@@ -40,7 +40,6 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     volumes:
       - ./backend/users.db:/app/users.db
-      - ./scripts/preload_videos.sh:/entrypoint.sh
       - ./videos:/videos
     depends_on: [minio, qdrant]
     ports:
