--- a/poc/frontend/Dockerfile
+++ b/poc/frontend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY package*.json ./
+COPY vite.config.js ./
 RUN npm install
 COPY src/ ./src/
 RUN npm run build
-CMD ["npx","serve","-s","build","-l","3000"]
+CMD ["npm", "start"]
